--- a/src/ResortArenaPalace/UserAccount.fxml
+++ b/src/ResortArenaPalace/UserAccount.fxml
@@ -15,8 +15,8 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="0.0" minWidth="0.0" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ResortArenaPalace.UserAccount">
-   <ImageView fitHeight="712.0" fitWidth="1008.0" layoutX="-6.0" opacity="0.37" pickOnBounds="true">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="0.0" minWidth="0.0" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.221" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ResortArenaPalace.UserAccount">
+   <ImageView fitHeight="600.0" fitWidth="1008.0" layoutX="-6.0" opacity="0.37" pickOnBounds="true">
          <Image url="@Login_PalmTree.jpg" />
       <effect>
          <InnerShadow color="#25d9dc" height="1.23" radius="0.0" width="0.0" />
@@ -64,13 +64,13 @@
             <Insets right="150.0" />
          </GridPane.margin>
       </TextField>
-            <Button fx:id="btn_SignInUAccount" mnemonicParsing="false" onAction="#changeScreenUAccToReservat" text="Sign In" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-      <Button fx:id="btn_GoHomeFromUA" mnemonicParsing="false" onAction="#changeScreenUAccountToHome" text="Go Home" GridPane.rowIndex="5">
+            <Button fx:id="btn_SignInUAccount" mnemonicParsing="false" onAction="#changeScreenUAccToReservat" prefHeight="31.0" prefWidth="113.0" text="Sign In" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+      <Button fx:id="btn_GoHomeFromUA" mnemonicParsing="false" onAction="#changeScreenUAccountToHome" prefHeight="31.0" prefWidth="109.0" text="Go Home" GridPane.rowIndex="6">
          <GridPane.margin>
-            <Insets left="30.0" />
+            <Insets left="200.0" />
          </GridPane.margin>
       </Button>
-      <Label fx:id="lbl_UserNaVal" prefHeight="17.0" prefWidth="96.0" textFill="#e13535" GridPane.columnIndex="1" GridPane.rowIndex="3">
+      <Label fx:id="lbl_UserNaVal" prefHeight="33.0" prefWidth="96.0" textFill="#e13535" GridPane.columnIndex="1" GridPane.rowIndex="3">
          <font>
             <Font size="7.0" />
          </font></Label>
@@ -78,6 +78,9 @@
          <font>
             <Font size="8.0" />
          </font>
+         <GridPane.margin>
+            <Insets top="20.0" />
+         </GridPane.margin>
       </Label>
       </GridPane>
          <Label fx:id="lbl_UAccount" layoutX="382.0" layoutY="38.0" text="User Account" textFill="#2a88c3">
